# autoware_mtr_python

./: .gitignore  README.md  package.xml  pyproject.toml  setup.cfg  setup.py
autoware_mtr/: geometry.py
autoware_mtr/conversion/: ego.py  lanelet.py  misc.py  predicted_object.py  tracked_object.py  trajectory.py
autoware_mtr/dataclass/: agent.py  history.py  lane.py  polyline.py  static_map.py
autoware_mtr/preprocess/: agent.py  lane.py  polyline.py
awml_pred/: test_utils.py  typing.py
awml_pred/common/: __init__.py  checkpoint.py  config.py  device.py  dist.py  format.py  io.py  logger.py  manager.py  seed.py
awml_pred/dataclass/: __init__.py  agent.py  polyline.py  prediction.py  scenario.py  static_map.py  utils.py
awml_pred/datasets/: __init__.py  base.py  builder.py  utils.py
awml_pred/datasets/transforms/: __init__.py  agent.py  compose.py  filter.py  load.py  pad.py  polyline.py  utils.py
awml_pred/datatype/: __init__.py  base.py  dataset.py
awml_pred/datatype/agents/: argoverse.py  base.py  t4.py  waymo.py
awml_pred/datatype/polylines/: __init__.py  argoverse.py  base.py  t4.py  waymo.py
awml_pred/deploy/apis/: __init__.py  torch2onnx.py
awml_pred/deploy/rewriters/: __init__.py  constants.py  function_rewriter.py  module_rewriter.py  rewriter_manager.py  rewriter_utils.py  symbolic_rewriter.py
awml_pred/evaluation/: __init__.py  common.py  waymo.py
awml_pred/models/: __init__.py  builder.py
awml_pred/models/decoders/: base.py
awml_pred/models/detectors/: base.py
awml_pred/models/layers/: __init__.py  conv.py  mlp.py  res.py
awml_pred/ops/: __init__.py  geometry.py  nms.py
awml_pred/optim/: __init__.py  builder.py  optimizer.py
awml_pred/runner/: __init__.py  base.py  test.py  train.py
awml_pred/visualization/: __init__.py  box.py  color.py  prediction.py  render.py
config/: mtr.yaml  mtr_ego_node.param.yaml  mtr_static.yaml  mtr_waymo.yaml
data/: bs.lanelet2_map.osm  cluster64_dict.pkl
launch/: mtr_ego_python.launch.xml
projects/MTR/: README.md  setup.py
src/: mtr_model_test.py  mtr_node.py
utils/: constant.py  lanelet_converter.py  load.py  polyline.py
(+57 files in other folders)
