[tool.poetry]
name = "mtr-pred"
version = "0.0.3"
description = "A toolkit for ML-based motion prediction tasks."
authors = ["ktro2828 <kotaro.uetake@tier4.jp>"]
readme = "README.md"
packages = [{ include = "awml_pred" }]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
numpy = "1.21.5"
tensorboardx = "<2.6.2.2"
tqdm = "^4.66.1"
pyyaml = "^6.0.1"
coloredlogs = "^15.0.1"
waymo-open-dataset-tf-2-11-0 = "^1.6.0"
opencv-python = "<4.8.0.76"
nuscenes-devkit = "<1.1.11"
av2 = "^0.2.1"
torch = "2.5.0"                         # default cuda 12.4
onnx = "<1.15.1"
webcolors = "^1.13"
tabulate = "^0.9.0"
omegaconf = "^2.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8"
pytest = "^7.4.2"
pytest-cov = "^5.0.0"
mkdocs = "^1.6.1"
mkdocstrings = { extras = ["python"], version = "^0.27.0" }
mkdocs-material = "^9.5.47"

[tool.poetry.scripts]
train-model = "tools.train:main"
test-model = "tools.test:main"
create-data = "tools.create_data:main"
visualize = "tools.visualize:main"
analyze = "tools.analyze:main"
torch2onnx = "tools.torch2onnx:main"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"

# === PyTest ===
[tool.pytest.ini_options]
# TODO(ktro2828): No ignore
addopts = ["--ignore=./projects", "--ignore=./tests/runner"]

# === PyTest Coverage ===
[tool.coverage.report]
exclude_also = ["def __repr__", "if TYPE_CHECKING", "@(abc\\.)?abstractmethod"]

# === Ruff ===
[tool.ruff]
# TODO(ktro2828): No exclude
exclude = ["awml_pred/models", "tests", "projects"]
line-length = 120

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20
preview = true

[tool.ruff.lint]
# https://beta.ruff.rs/docs/rules/
select = ["N", "E", "W", "D", "F", "I", "C90", "S"]
ignore = [
    "D100",
    "D101",
    "D104",
    "D105",
    "D415",
    "D418",
    "E721",
    "N817",
    "S101",
    "S311",
    "S403",
    "S404",
]
fixable = ["ALL"]
preview = true

[tool.ruff.isort]
# https://pycqa.github.io/isort/docs/configuration/options.html#default-section
force-single-line = false
